A patch from Bruno Busco "Collapsible Field Groups with clickable title" (https://issues.apache.org/jira/browse/OFBIZ-3176) - OFBIZ-3176 in the attached patch there is a new rendering for the Group Field Title bar. I removed the table and used simple divs. Moreover the field group title is now all clickable in order to collapse expand the group.
The necessary changes to all themes are also included in the patch.

git-svn-id: https://svn.apache.org/repos/asf/ofbiz/trunk@833910 13f79535-47bb-0310-9956-ffa450edef68

--- a/themes/bizznesstime/webapp/bizznesstime/css/legacy.css
+++ b/themes/bizznesstime/webapp/bizznesstime/css/legacy.css
@@ -714,20 +714,21 @@ Legacy Forms
 }
 
 .fieldgroup-title-bar ul .collapsed {
-	background: url(/images/expand.gif) no-repeat center center;
+	background: url(/images/expand.gif) no-repeat left center;
 	min-height: 1.1em;
 	min-width: 1.1em;
 }
 
 .fieldgroup-title-bar ul .expanded {
-	background: url(/images/collapse.gif) no-repeat center center;
+	background: url(/images/collapse.gif) no-repeat left center;
 	min-height: 1.1em;
 	min-width: 1.1em;
 }
 
-.fieldgroup-title-bar td.collapse {
-	width: 1.1em;
-	cursor: default;
+.fieldgroup-title-bar a {
+cursor:pointer;
+text-decoration:none;
+padding-left: 10px;
 }
 
 /***********************************************
